theme/scss/site/nav.scss
.wp-block-navigation__submenu-container {
	@extend .rounded;
	.wp-block-navigation-item {
		color: black !important;
		&:first-child {
			@extend .rounded-top;
		}
		&:last-child {
			@extend .rounded-bottom;
		}
		&:hover {
			background-color: $grey-5;
		}
	}
}

.wp-block-navigation__container .wp-block-navigation__submenu-container .wp-block-navigation__submenu-container{
	left: 100% !important;
	right: auto !important;
}

.wp-block-navigation__container > li {
	margin-right: 10px;
}

@media screen and (min-width: 782px) {
	.wp-block-columns:not(.is-not-stacked-on-mobile) > .site-title-column {
		flex: initial !important;
		width: initial !important;
	}
}

.wp-block-post-navigation-link {
	a {
		padding: .375rem .75rem !important;
	}
	margin-bottom: 5px !important;
}

.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__container {
	a, span {
		color: #333333 !important;
	}

	.wp-block-navigation__submenu-container, .wp-block-navigation-item {
		padding-top: 1rem !important;
		padding-bottom: 0;
	}
}

